arrumando footer e js para animar ao scroll
arrumando footer e js para animar ao scroll

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <div class="superinfo-bg">
+  <div class="superinfo-bg js-scroll">
     <div class="superinfo">
       <p>Seg / Sex - 08:00 às 18:00</p>
       <a href="tel:+5535999998888">+55 35 9 9999-8888</a>
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <header class="menu-bg">
+  <header class="menu-bg js-scroll">
     <div class="menu">
       <div class="menu-logo">
         <a href="#">FlexBlog</a>
@@ -37,9 +37,9 @@
     </div>
   </header>
 
-  <h1 class="introducao">Novos valores e <br>Propriedades de CSS</h1>
+  <h1 class="introducao js-scroll">Novos valores e <br>Propriedades de CSS</h1>
 
-  <section class="sobre" id="sobre">
+  <section class="sobre js-scroll" id="sobre">
     <div class="sobre-info">
       <h1>Sobre</h1>
       <p>
@@ -57,7 +57,7 @@
     </div>
   </section>
 
-  <section class="produtos" id="produtos">
+  <section class="produtos js-scroll" id="produtos">
     <h1>Produtos</h1>
     <div class="produtos-container">
       <div class="produtos-item purple">
@@ -75,7 +75,7 @@
     </div>
   </section>
 
-  <section class="preco" id="preco">
+  <section class="preco js-scroll" id="preco">
     <div class="preco-item">
       <h2>Cobre</h2>
       <span><sup>R$</sup> 19</span>
@@ -116,7 +116,7 @@
     </div>
   </section>
 
-  <section class="qualidade" id="qualidade">
+  <section class="qualidade js-scroll" id="qualidade">
     <div class="qualidade-item">
       <h2>Inteligente</h2>
       <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
@@ -143,7 +143,7 @@
     </div>
   </section>
 
-  <section class="newsletter">
+  <section class="newsletter js-scroll">
     <div class="newletter-info">
       <h1>Newsletter</h1>
       <p>assine e fique por dentro das novidades</p>
@@ -158,6 +158,7 @@
     <p>FlexBlog © Todos os direitos reservados.</p>
   </footer>
 
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
